# pertTF

./: INSTALL.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml
demos/tutorials/: INFERENCE.md  LORA_FINETUNING.md  TUTORIAL_50gene_eval.ipynb  feature_pert_encoder_demo.ipynb  lora_finetuning_tutorial.ipynb  train_pertTF_with__lochNESS.ipynb
perttf/: __init__.py  custom_loss.py
perttf/model/: base_model.py  composition_change_analysis.py  config_gen.py  expr_sampler.py  hf.py  modules.py  pertTF.py  pert_emb.py  train_data_gen.py  train_function.py
perttf/utils/: custom_tokenizer.py  load_pretrain.py  logger.py  misc.py  ot.py  pert_data_loader.py  plot.py  preprocessor.py  set_optimizer.py
