[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pertTF"
version = "0.1.0"  # or use dynamic versioning
description = "Transformer model with single-cell perturbation predictions"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Wei Li", email = "wei@weililab.org"}
]
keywords = ["single-cell", "transformer", "perturbation", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    # Add your dependencies here
    # "numpy>=1.19.0",
    # "torch>=1.7.0",
    # etc.
    "scanpy >= 1.10.0",
]

[project.urls]
Homepage = "https://github.com/davidliwei/pertTF"
Repository = "https://github.com/davidliwei/pertTF"
